--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier ./src --check",
+    "prettier:fix": "prettier ./src --write"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -32,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "react-router-dom": "^6.24.1",
     "typescript": "^5.5.3",
-    "vite": "^5.3.3"
+    "vite": "^5.3.3",
+    "prettier": "^3.3.2"
   }
 }
