--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ts-pattern": "5.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
@@ -32,9 +33,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "prettier": "^3.3.2",
     "react-router-dom": "^6.24.1",
     "typescript": "^5.5.3",
-    "vite": "^5.3.3",
-    "prettier": "^3.3.2"
+    "vite": "^5.3.3"
   }
 }
